--- a/.travis.yml
+++ b/.travis.yml
@@ -97,6 +97,6 @@ before_script:
   - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=${CXX}
 
 script:
-  - if [[ "${BUILD_DOC}" != "true" ]]; then make -k examples tests && ctest --output-on-failure; fi
+  - if [[ "${BUILD_DOC}" != "true" ]]; then make -k examples tests || ctest; fi
   - if [[ "${BUILD_DOC}" == "true" ]]; then make doc; fi
   - if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_PULL_REQUEST}" != "true" && "${TRAVIS_BRANCH}" == "master" ]]; then make doc.update &> /dev/null; fi
