--- a/.travis.yml
+++ b/.travis.yml
@@ -82,9 +82,14 @@ install:
   - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
   - mkdir "${DEPS_PATH}"
 
-  - DOXYGEN_URL="http://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.10.linux.bin.tar.gz"
-  - if [[ "${BUILD_DOC}" == "true" ]]; then mkdir "${DEPS_PATH}/doxygen" && travis_retry wget --quiet -O - ${DOXYGEN_URL} | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"; fi
-  - if [[ "${BUILD_DOC}" == "true" ]]; then export PATH=${DEPS_PATH}/doxygen/bin:${PATH}; fi
+  - |
+    if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_BRANCH}" == "master"  && "${TRAVIS_PULL_REQUEST}" != "true" ]]
+    then
+        mkdir "${DEPS_PATH}/doxygen"
+        DOXYGEN_URL="http://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.10.linux.bin.tar.gz"
+        travis_retry wget --quiet -O - ${DOXYGEN_URL} | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen"
+        export PATH=${DEPS_PATH}/doxygen/bin:${PATH}
+    fi
 
 before_script:
   - git config --global user.name "Travis Bot"
@@ -97,6 +102,20 @@ before_script:
   - cmake "${TRAVIS_BUILD_DIR}" -DCMAKE_CXX_COMPILER=${CXX}
 
 script:
-  - if [[ "${BUILD_DOC}" != "true" ]]; then make -k examples tests || ctest; fi
-  - if [[ "${BUILD_DOC}" == "true" ]]; then make doc; fi
-  - if [[ "${BUILD_DOC}" == "true" && "${TRAVIS_PULL_REQUEST}" != "true" && "${TRAVIS_BRANCH}" == "master" ]]; then make doc.update &> /dev/null; fi
+  - |
+    if [[ "${BUILD_DOC}" == "true" ]]
+    then
+        cd doc
+        make doc
+        if [[ "${TRAVIS_BRANCH}" == "master"  && "${TRAVIS_PULL_REQUEST}" != "true" ]]
+        then
+            git clone https://brunocodutra:${GITHUB_TOKEN}@github.com/brunocodutra/metal -q --depth 1 --branch=gh-pages gh-pages &> /dev/null
+            cp -r gh-pages/.git/ html/.git/  &> /dev/null
+            git -C html/ add --all . &> /dev/null
+            git -C html/ commit --allow-empty -m "updating to $(git -C ${TRAVIS_BUILD_DIR} rev-parse --short HEAD)" &> /dev/null
+            git -C html/ push origin gh-pages &> /dev/null
+        fi
+    else
+        make -k examples tests
+        ctest
+    fi
