--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,19 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
-os: Visual Studio 2015
-platform: Any CPU
 clone_depth: 1
+
+configuration:
+  - Debug
+  - Release
+
+matrix:
+    fast_finish: false
 
 environment:
     matrix:
-      - GENERATOR: "Visual Studio 14 2015 Win64"
+      - GENERATOR: Visual Studio 14 2015
+      - GENERATOR: Visual Studio 14 2015 Win64
 
 before_build:
   - mkdir "%APPVEYOR_BUILD_FOLDER%\build"
