--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,10 +3,7 @@
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
 clone_depth: 1
-
-configuration:
-  - Debug
-  - Release
+platform: x64
 
 matrix:
     fast_finish: false
