--- a/.travis.yml
+++ b/.travis.yml
@@ -21,12 +21,6 @@ matrix:
             apt:
                 packages:
                   - g++-4.8
-                sources: &toolchain
-                  - ubuntu-toolchain-r-test
-                  - llvm-toolchain-precise
-                  - llvm-toolchain-precise-3.5
-                  - llvm-toolchain-precise-3.6
-                  - llvm-toolchain-precise-3.7
 
       - compiler: g++
         env: CXX_VERSION=4.9
@@ -34,7 +28,6 @@ matrix:
             apt:
                 packages:
                   - g++-4.9
-                sources: *toolchain
 
       - compiler: g++
         env: CXX_VERSION=5
@@ -42,7 +35,6 @@ matrix:
             apt:
                 packages:
                   - g++-5
-                sources: *toolchain
 
       - compiler: clang++
         env: CXX_VERSION=3.5
@@ -50,7 +42,6 @@ matrix:
             apt:
                 packages:
                   - clang-3.5
-                sources: *toolchain
 
       - compiler: clang++
         env: CXX_VERSION=3.6
@@ -58,7 +49,6 @@ matrix:
             apt:
                 packages:
                   - clang-3.6
-                sources: *toolchain
 
       - compiler: clang++
         env: CXX_VERSION=3.7
@@ -66,7 +56,6 @@ matrix:
             apt:
                 packages:
                   - clang-3.7
-                sources: *toolchain
 
       - compiler: clang++
         env: CXX_VERSION=3.8
@@ -74,7 +63,15 @@ matrix:
             apt:
                 packages:
                   - clang-3.8
-                sources: *toolchain
+
+addons:
+    apt:
+        sources:
+          - ubuntu-toolchain-r-test
+          - llvm-toolchain-precise
+          - llvm-toolchain-precise-3.5
+          - llvm-toolchain-precise-3.6
+          - llvm-toolchain-precise-3.7
 
 install:
   - DEPS_PATH="${TRAVIS_BUILD_DIR}/deps"
@@ -83,7 +80,7 @@ install:
   - |
     if [[ "${BUILD_DOC}" == "true" ]]
     then
-        DOXYGEN_URL="http://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.10.linux.bin.tar.gz"
+        DOXYGEN_URL="http://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.11.linux.bin.tar.gz"
         mkdir "${DEPS_PATH}/doxygen" &&
         travis_retry wget --quiet -O - ${DOXYGEN_URL} | tar --strip-components=1 -xz -C "${DEPS_PATH}/doxygen" &&
         export PATH=${DEPS_PATH}/doxygen/bin:${PATH}
