[doc] adding reference documentation for pair<>, first<> and second<>

--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -234,22 +234,22 @@ TAB_SIZE               = 4
 
 ALIASES += strike{1}="<div class=\"strike\">\1</div>"
 
-ALIASES +=value="\ref concepts_value"
-ALIASES +=values="\ref concepts_value \"Values\""
-ALIASES +=optional="\ref concepts_optional"
-ALIASES +=optionals="\ref concepts_optional \"Optionals\""
-ALIASES +=number="\ref concepts_number"
-ALIASES +=numbers="\ref concepts_number \"Numbers\""
-ALIASES +=expression="\ref concepts_expression"
-ALIASES +=expressions="\ref concepts_expression \"Expressions\""
-ALIASES +=lambda="\ref concepts_lambda"
-ALIASES +=lambdas="\ref concepts_lambda \"Lambdas\""
-ALIASES +=list="\ref concepts_list"
-ALIASES +=lists="\ref concepts_list \"Lists\""
-ALIASES +=pair="\ref concepts_pair"
-ALIASES +=pairs="\ref concepts_pair \"Pairs\""
-ALIASES +=map="\ref concepts_map"
-ALIASES +=maps="\ref concepts_map \"Maps\""
+ALIASES +=value="\ref value"
+ALIASES +=values="\ref value \"Values\""
+ALIASES +=optional="\ref optional"
+ALIASES +=optionals="\ref optional \"Optionals\""
+ALIASES +=number="\ref number"
+ALIASES +=numbers="\ref number \"Numbers\""
+ALIASES +=expression="\ref expression"
+ALIASES +=expressions="\ref expression \"Expressions\""
+ALIASES +=lambda="\ref lambda"
+ALIASES +=lambdas="\ref lambda \"Lambdas\""
+ALIASES +=list="\ref list"
+ALIASES +=lists="\ref list \"Lists\""
+ALIASES +=pair="\ref pair"
+ALIASES +=pairs="\ref pair \"Pairs\""
+ALIASES +=map="\ref map"
+ALIASES +=maps="\ref map \"Maps\""
 
 ALIASES +=tip{1}="<div class=\"panel panel-info\"><div class="panel-heading"><span class=\"octicon octicon-light-bulb\"></span>Tip</div><div class="panel-body">\1</div></div>"
 ALIASES +=note{1}="<div class=\"panel panel-warning\"><div class="panel-heading"><span class=\"octicon octicon-info\"></span>Note</div><div class="panel-body">\1</div></div>"
