--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -3,4 +3,5 @@
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
-metal_add_test_tree(examples)
+
+configure_targets(examples)
