--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,4 +3,8 @@
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
-metal_add_test_tree(tests)
+
+configure_targets(tests)
+foreach(target ${targets})
+    add_test(${target} ${CMAKE_CURRENT_BINARY_DIR}/${target})
+endforeach()
