--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -2,6 +2,4 @@
 # Distributed under the Boost Software License, Version 1.0.
 # (See accompanying file LICENSE.txt or copy at http://boost.org/LICENSE_1_0.txt)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include/)
-
-configure_targets(examples)
+metal_add_test_tree(examples "${CMAKE_CURRENT_SOURCE_DIR}")
