--- a/appveyor.yml
+++ b/appveyor.yml
@@ -37,10 +37,5 @@ before_build:
 
 build_script:
   - cmake --build "%EXTERNAL_BUILD_PATH%" --target external
-
   - cmake --build "%METAL_BUILD_PATH%" --target doc
-  - cmake --build "%METAL_BUILD_PATH%" --target examples
-  - cmake --build "%METAL_BUILD_PATH%" --target tests
-
-test_script:
-  - pushd "%METAL_BUILD_PATH%" && ctest & popd
+  - pushd "%METAL_BUILD_PATH%" && ctest --output-on-failure & popd
