--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,4 +38,4 @@ before_build:
 build_script:
   - cmake --build "%EXTERNAL_BUILD_PATH%" --target external
   - cmake --build "%METAL_BUILD_PATH%" --target doc
-  - pushd "%METAL_BUILD_PATH%" && ctest --output-on-failure & popd
+  - pushd "%METAL_BUILD_PATH%" && ctest -C Release --output-on-failure & popd
