--- a/.travis.yml
+++ b/.travis.yml
@@ -178,5 +178,5 @@ script:
         fi
     else
         (cd "${EXTERNAL_BUILD_PATH}" && make all) &&
-        (cd "${METAL_BUILD_PATH}" && ctest -C Release --output-on-failure)
+        (cd "${METAL_BUILD_PATH}" && ctest --output-on-failure)
     fi
